--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
     <name>auth-security-core</name>
     <description>auth-security-core</description>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/AntonioBasileo/auth-security-core</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <jwt.version>0.13.0</jwt.version>
         <java.version>21</java.version>
