--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -34,7 +34,7 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Publish to GitHub Packages
-        run: mvn deploy -DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/${{ github.repository }}
+        run: mvn deploy -DskipTests -DaltDeploymentRepository=github::https://maven.pkg.github.com/${{ github.repository }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
